ozone/drm: Turn off unsupported overlay rotations

DRM does not support overlay rotation well.
NV12 planes are supported, but they need to be
tiled.  That information is not available currently.

BUG=872901
TEST=browser

(cherry picked from commit 851f06bc8f3a9fe6fab3b790a962f87b32a1eab8 [formerly a90551a9a54efe3afdecb37b450a0cd56dad6ac1])

Change-Id: Ide9c837dca62a6db9d13e6fedaaf5b256e4bcb79
Reviewed-on: https://chromium-review.googlesource.com/1196019
Commit-Queue: Fritz Koenig <frkoenig@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Daniel Nicoara <dnicoara@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588903}
Reviewed-on: https://chromium-review.googlesource.com/1214403
Cr-Commit-Position: refs/branch-heads/3538@{#174}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 80ab9a03ccc6ecb0d28636b3dafc1296518ffac6